--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 		<!-- This is an HTML comment. Find the comments below and follow the instructions. -->
 
-		<h1>New Map of Lexington</h1>
+		<h1>Visit Scenic Nicholasville a giant neighborhood of Lexington</h1>
 
 		<div id='map'></div>
 
@@ -105,7 +105,7 @@
 
 		// map options
 		var options = {
-			center: [38.0406, -84.5037], // lat/lon values
+			center: [37.8806, -84.5730], // lat/lon values
 			zoom: 12
 		}
 
