Web site added but not subtracted

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		/* This is a comment in CSS styles */
 	</style>
 </head>
-<h1>71 might be the wrong line</h1>
+<h1></h1>
 <body>
 	<section>
 
@@ -80,14 +80,12 @@
 
 
 		<h2>about this map</h2>
-		<p>Additional information about
-			<a href="#">the data</a> and map goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec
-			laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus.</p>
+		<p></p>
 
 		<ul>
 			<!-- Change the following contacts to your personal brand, whatever you want it to be! -->
 			<li>See my projects on GitHub:
-				<a href="https://github.com/newmapsplus">New Maps Plus</a>
+				<a href="https://github.com/Offonatangent">New Maps Plus</a>
 			</li>
 			<li>Follow me on twitter:
 				<a href="https://twitter.com/NewMapsPlus">@NewMapsPlus</a>
@@ -106,7 +104,7 @@
 		// map options
 		var options = {
 			center: [37.8806, -84.5730], // lat/lon values
-			zoom: 12
+			zoom: 13
 		}
 
 		// create a Leaflet map in our division container with id of 'map'
@@ -120,7 +118,7 @@
 		}).addTo(map);
 
 		// write a custom message for the Leaflet tooltip
-		var message = 'Lexington is awesome!';
+		var message = 'Nicholasville Sponging off of Lexingtons Awesomness';
 
 		// add a marker to the center of the map and open the tooltip
 		L.marker(map.getCenter())
