--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>Web Page Template</title>
+	<title>Map of Nicholasville</title>
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css" />
@@ -87,11 +87,7 @@
 			<li>See my projects on GitHub:
 				<a href="https://github.com/Offonatangent">New Maps Plus</a>
 			</li>
-			<li>Follow me on twitter:
-				<a href="https://twitter.com/NewMapsPlus">@NewMapsPlus</a>
-			</li>
-			<li>Visit my
-				<a href='#'>mapping portfolio</a>.</li>
+
 		</ul>
 	</section>
 
