consider using h2 element

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 
 		<!-- This is an HTML comment. Find the comments below and follow the instructions. -->
 
-		<h1>Visit Scenic Nicholasville a giant neighborhood of Lexington</h1>
+		<h1>Visit Scenic Nicholasville</h1>
 
 		<div id='map'></div>
 
 
-		<h2>about this map</h2>
+		<h2>a giant neighborhood of Lexington</h2>
 		<p></p>
 
 		<ul>
