use double quotes to use single quote inside

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		}).addTo(map);
 
 		// write a custom message for the Leaflet tooltip
-		var message = 'Nicholasville Sponging off of Lexingtons Awesomness';
+		var message = "Nicholasville Sponging off of Lexington's Awesomness";
 
 		// add a marker to the center of the map and open the tooltip
 		L.marker(map.getCenter())
