experiment with changing width values

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 		}
 
 		section {
-			width: 960px;
+			/* width: 960px; */
+			width: 80%;
+			/* 
+			   Let's experiment! Change a style property that controls width of all elements inside "section" 
+			   If we change from a fixed-width to a relative width, the content adapts better for different screen sizes. 
+			*/
 			margin: 20px auto;
 		}
 
